--- a/.github/workflows/blog_deploy.yml
+++ b/.github/workflows/blog_deploy.yml
@@ -17,6 +17,9 @@ jobs:
         with: 
           node-version: 12
 
+      - name: run addVuess
+        run: 'node ./.github/scripts/addVuess.js'
+
       - name: Build and Deploy
         uses: jenkey2011/vuepress-deploy@master
         env:
