--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@vuepress/plugin-medium-zoom": "^2.0.0-beta.24",
     "@vuepress/plugin-nprogress": "^1.8.2",
     "@vuepress/plugin-pwa": "^1.8.2",
-    "vuepress": "^1.8.2"
+    "vuepress": "^1.8.2",
+    "vuepress-plugin-feed": "^0.1.9"
   }
 }
