--- a/package.json
+++ b/package.json
@@ -23,10 +23,13 @@
     "@vssue/vuepress-plugin-vssue": "^1.4.8",
     "@vuepress/plugin-back-to-top": "^1.8.2",
     "@vuepress/plugin-blog": "^1.9.4",
+    "@vuepress/plugin-google-analytics": "^1.8.2",
     "@vuepress/plugin-medium-zoom": "^2.0.0-beta.24",
     "@vuepress/plugin-nprogress": "^1.8.2",
     "@vuepress/plugin-pwa": "^1.8.2",
     "vuepress": "^1.8.2",
-    "vuepress-plugin-feed": "^0.1.9"
+    "vuepress-plugin-baidu-autopush": "^1.0.1",
+    "vuepress-plugin-feed": "^0.1.9",
+    "vuepress-plugin-rss": "^2.0.0"
   }
 }
