--- a/package.json
+++ b/package.json
@@ -27,14 +27,14 @@
     "@vuepress/plugin-medium-zoom": "^2.0.0-beta.24",
     "@vuepress/plugin-nprogress": "^1.8.2",
     "@vuepress/plugin-pwa": "^1.8.2",
+    "lodash": "^4.17.15",
     "vuepress": "^1.8.2",
     "vuepress-plugin-autometa": "^0.1.13",
     "vuepress-plugin-autonav": "^0.1.3",
     "vuepress-plugin-baidu-autopush": "^1.0.1",
     "vuepress-plugin-feed": "^0.1.9",
     "vuepress-plugin-minimal-analytics": "^0.1.4",
-    "vuepress-plugin-rss": "^2.0.0",
-    "lodash": "^4.17.15"
+    "vuepress-plugin-rss": "^2.0.0"
   },
   "dependencies": {
     "@types/lodash.debounce": "^4.0.6",
