--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "vuepress-plugin-baidu-autopush": "^1.0.1",
     "vuepress-plugin-feed": "^0.1.9",
     "vuepress-plugin-minimal-analytics": "^0.1.4",
-    "vuepress-plugin-rss": "^2.0.0"
+    "vuepress-plugin-rss": "^2.0.0",
+    "vuepress-plugin-seo": "^0.1.4"
   },
   "dependencies": {
     "@types/lodash.debounce": "^4.0.6",
