--- a/package.json
+++ b/package.json
@@ -1,45 +1,29 @@
 {
   "name": "blog",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
+  "repository": "git@github.com:stormbuf/blog.git",
+  "author": "stormbuf <stormbuf@163.com>",
+  "license": "MIT",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "vuepress dev docs",
     "build": "vuepress build docs"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/stormbuf/blog.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/stormbuf/blog/issues"
-  },
-  "homepage": "https://github.com/stormbuf/blog#readme",
   "devDependencies": {
-    "@vssue/api-github-v3": "^1.4.7",
-    "@vssue/vuepress-plugin-vssue": "^1.4.8",
-    "@vuepress/plugin-back-to-top": "^1.8.2",
-    "@vuepress/plugin-blog": "^1.9.4",
-    "@vuepress/plugin-google-analytics": "^1.8.2",
-    "@vuepress/plugin-medium-zoom": "^2.0.0-beta.24",
-    "@vuepress/plugin-nprogress": "^1.8.2",
-    "@vuepress/plugin-pwa": "^1.8.2",
-    "lodash": "^4.17.15",
-    "vuepress": "^1.8.2",
-    "vuepress-plugin-autometa": "^0.1.13",
-    "vuepress-plugin-autonav": "^0.1.3",
-    "vuepress-plugin-baidu-autopush": "^1.0.1",
-    "vuepress-plugin-feed": "^0.1.9",
-    "vuepress-plugin-minimal-analytics": "^0.1.4",
-    "vuepress-plugin-rss": "^2.0.0",
-    "vuepress-plugin-seo": "^0.1.4"
+    "@types/node": "^17.0.8",
+    "@typescript-eslint/eslint-plugin": "^5.9.0",
+    "@typescript-eslint/parser": "^5.9.0",
+    "@vuepress/plugin-pwa": "^2.0.0-beta.32",
+    "@vuepress/plugin-pwa-popup": "^2.0.0-beta.32",
+    "eslint": "^8.6.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-standard": "^5.0.0",
+    "vuepress": "^2.0.0-beta.32"
   },
   "dependencies": {
-    "@types/lodash.debounce": "^4.0.6",
-    "moment": "^2.29.1",
-    "moment-timezone": "^0.5.33"
+    "@vssue/vuepress-plugin-vssue": "^1.4.8"
   }
 }
