--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "vuepress build docs"
   },
   "devDependencies": {
+    "@stormbuf/vuepress-plugin-rss": "0.1.0",
     "@types/node": "^17.0.8",
     "@typescript-eslint/eslint-plugin": "^5.9.0",
     "@typescript-eslint/parser": "^5.9.0",
