--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@types/node": "^17.0.8",
     "@typescript-eslint/eslint-plugin": "^5.9.0",
     "@typescript-eslint/parser": "^5.9.0",
+    "@vue/cli-plugin-typescript": "~5.0.0-rc.1",
     "@vuepress/plugin-google-analytics": "^2.0.0-beta.32",
     "@vuepress/plugin-pwa": "^2.0.0-beta.32",
     "@vuepress/plugin-pwa-popup": "^2.0.0-beta.32",
+    "@vuepress/plugin-register-components": "^2.0.0-beta.32",
     "@vuepress/plugin-search": "^2.0.0-beta.32",
     "@vuepress/plugin-shiki": "^2.0.0-beta.32",
     "eslint": "^8.6.0",
@@ -28,7 +30,9 @@
     "vuepress": "^2.0.0-beta.32"
   },
   "dependencies": {
+    "@types/lodash.debounce": "^4.0.6",
     "@vssue/vuepress-plugin-vssue": "^1.4.8",
-    "shiki": "^0.10.0"
+    "shiki": "^0.10.0",
+    "stylus": "^0.56.0"
   }
 }
