--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,8 @@
     "moduleResolution": "node",               /* 模块解析策略 */
     "baseUrl": "./", // 用于解析非相对模块名称的基目录
     "types": [ /* 要包含的类型声明文件路径列表*/
-      "./typings"
+      "./typings",
+      "node_modules/@types"
     ],                     
     "esModuleInterop": true                  /* 允许编译生成文件时，在代码中注入工具类(__importDefault、__importStar)对ESM与commonjs混用情况做兼容处理*/
 
