--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "@types/lodash.debounce": "^4.0.6",
+    "ant-design-vue": "3.0.0-beta.7",
     "shiki": "^0.10.0",
     "stylus": "^0.56.0"
   }
